<!DOCTYPE resources [<!ENTITY appname "Pomešljajček">]>

<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="app_name_padded" translatable="false">&#160;&#160;&appname;&#160;&#160;</string>
    <string name="app_character" translatable="false">拌</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <!--<string name="fuck_yeah">FUCK YEAH!</string>-->
    <string name="splash_continue">Continue</string>
    <string name="has_traditional">HAS TRADITIONAL CHARACTER</string>

    <string name="transition_logo" translatable="false">transition_logo</string>
    <string name="transition_title" translatable="false">transition_title</string>
    <string name="transition_year_title" translatable="false">transition_year_title</string>
    <string name="transition_entry_title" translatable="false">transition_entry_title</string>

    <string name="delete">Delete</string>
    <string name="delete_item">Delete Item?</string>

    <string name="add_year_title">Add Year</string>
    <string name="edit_year_title">Edit Year</string>
    <string name="delete_year_title">Delete Year</string>
    <string name="delete_year_message">Do you really want to delete \"%1$s\"?</string>

    <string name="add_section_title">Add Section</string>
    <string name="edit_section_title">Edit Section</string>
    <string name="delete_section_title">Delete Section</string>
    <string name="delete_section_message">Do you really want to delete \"%1$s\"?</string>

    <string name="add_entry_title">Add Entry</string>
    <string name="edit_entry_title">Edit Entry</string>
    <string name="delete_entry_title">Delete Entry</string>
    <string name="delete_entry_message">Do you really want to delete \"%1$s\"?</string>

    <!--<string name="year_number">Year %1$d</string>-->
    <string name="year_name_label">Year name:</string>

    <!--<string name="section_number">Section %1$d</string>-->
    <string name="section_name_label">Section name:</string>

    <string name="entry_pinyin_label">Pinyin:</string>
    <string name="entry_character_label">Character:</string>
    <string name="entry_has_traditional">Has Traditional Character</string>
    <!--<string name="entry_has_traditional_label">Has traditional character:</string>-->

    <string name="challenge_dialog_title">Select Sections</string>

    <string name="quiz_show_answer">Show answer?</string>
    <string name="quiz_congratulations">Congratulations!</string>
    <string name="quiz_result_text">You used %1$d answers</string>

    <string name="background_image_desc">Background image</string>
    <string name="back_button_desc">Navigate back</string>
    <string name="add_button_desc">Add</string>
    <string name="dialog_pp_title">Privacy Policy</string>
    <string name="dialog_pp_message">By clicking \"I Agree\", you indicate that you have read and agree to our <a href="https://sites.google.com/view/pomesljajcek/pp">Privacy Policy</a>.</string>
    <string name="accept">I Agree</string>
    <string name="splash_version">Version %1$s</string>
    <string name="cd_delete">Delete</string>

</resources>
