<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="26dp"
    android:paddingBottom="16dp"
    android:paddingLeft="26dp"
    android:paddingRight="26dp">

    <TextView
        android:id="@+id/entry_pinyin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:labelFor="@id/entry_pinyin"

        android:text="@string/entry_pinyin_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/dialogMessageColor"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/entry_pinyin"
        />

    <EditText
        android:theme="@style/AlertDialogTheme.View"
        android:id="@+id/entry_pinyin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:inputType="text|textCapSentences"
        android:textAlignment="center"
        android:textColor="@color/dialogMessageColor"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/entry_pinyin_label"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/entry_character_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:labelFor="@id/entry_character"

        android:textColor="@color/dialogMessageColor"
        android:text="@string/entry_character_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/entry_character"
        />

    <EditText
        android:theme="@style/AlertDialogTheme.View"
        android:id="@+id/entry_character"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:textColor="@color/dialogMessageColor"
        android:inputType="text|textCapSentences"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/entry_pinyin"
        app:layout_constraintStart_toEndOf="@+id/entry_character_label"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!--<TextView-->
        <!--android:id="@+id/entry_simplified_label"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:labelFor="@id/entry_simplified"-->

        <!--android:textColor="@color/dialogMessageColor"-->
        <!--android:text="@string/entry_simplified_label"-->
        <!--android:textAlignment="center"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
        <!--/>-->

    <CheckBox
        android:id="@+id/entry_has_traditional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/entry_has_traditional"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/dialogMessageColor"

        app:layout_constraintTop_toBottomOf="@id/entry_character"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
