<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="eu.slicky.pomesljajcek.ui.activity.main.MainActivity">

    <data>
        <variable
            name="fragment"
            type="eu.slicky.pomesljajcek.ui.activity.main.section.SectionFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <View
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:id="@+id/nav_bar"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:background="@drawable/app_bar_gradient"
            android:elevation="0dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/nav_left_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"

            android:contentDescription="@string/back_button_desc"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/textPrimary"
            android:background="@color/transparent"

            app:layout_constraintTop_toBottomOf="@id/status_bar"
            app:layout_constraintBottom_toBottomOf="@id/nav_bar"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageButton
            android:id="@+id/nav_right_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:visibility="invisible"

            android:contentDescription="@string/add_button_desc"
            android:src="@drawable/ic_add"
            android:tint="@color/textPrimary"
            android:background="@color/transparent"

            app:layout_constraintTop_toBottomOf="@id/status_bar"
            app:layout_constraintBottom_toBottomOf="@id/nav_bar"
            app:layout_constraintEnd_toEndOf="parent" />

        <eu.slicky.pomesljajcek.ui.view.AppTextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:id="@+id/subtitle"
            android:transitionName="@string/transition_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="visible"

            android:text="@string/app_name_padded"
            android:textColor="@color/textSecondary"
            android:textSize="28sp"
            app:fontFamily="@font/sedgwickave_regular"

            android:shadowColor="@color/black_5"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"

            app:layout_constraintTop_toBottomOf="@id/status_bar"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintStart_toEndOf="@id/nav_left_button"
            app:layout_constraintEnd_toStartOf="@id/nav_right_button"

            app:layout_constraintVertical_chainStyle="packed"
            />

        <eu.slicky.pomesljajcek.ui.view.AppTextView
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:id="@+id/title"
            android:transitionName="@string/transition_year_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="visible"

            android:textColor="@color/textPrimary"
            android:textSize="35sp"
            app:fontFamily="@font/roboto_regular"

            android:shadowColor="@color/black_6"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"

            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintBottom_toBottomOf="@id/nav_bar"
            app:layout_constraintStart_toEndOf="@id/nav_left_button"
            app:layout_constraintEnd_toStartOf="@id/nav_right_button"

            app:layout_constraintVertical_chainStyle="packed"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="56dp"

            android:clipToPadding="false"

            app:layout_constraintTop_toBottomOf="@+id/nav_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:listitem="@layout/item_section"
            />

        <RelativeLayout
            android:id="@+id/fab_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fitsSystemWindows="true"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_right"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="24dp"
                android:elevation="8dp"

                app:backgroundTint="@color/colorFab"
                app:tint="@color/white_A"
                android:src="@drawable/ic_add"
                android:scaleType="center"

                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_left"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="24dp"
                android:elevation="8dp"

                app:backgroundTint="@color/colorFab"
                app:tint="@color/white_A"
                android:src="@drawable/ic_flame"
                android:scaleType="center"

                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
