<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_root"
    android:layout_width="match_parent"
    android:layout_height="70dp"

    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"

    app:leftEdgeSwipeOffset="0dp"
    app:rightEdgeSwipeOffset="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/swipe_left_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66FF5534">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="12dp"

            android:tint="@color/white_E"
            android:src="@drawable/ic_delete"

            android:contentDescription="@string/cd_delete"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_text"
            />

        <TextView
            android:id="@+id/delete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"

            android:text="@string/delete_item"
            android:textColor="@color/white_E"
            android:textSize="17sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete_icon"
            />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"

            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="@color/white_C"
            android:backgroundTint="@color/delete"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete_text"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="1.0"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/swipe_right_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/edit_button"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:clickable="true"
            android:focusable="true"

            android:background="@color/white_5"

            tools:ignore="UselessParent">

            <eu.slicky.pomesljajcek.ui.view.AppImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"

                android:clickable="false"
                android:focusable="false"

                android:background="@drawable/ic_edit"
                android:backgroundTint="@color/white_D"
                />

        </FrameLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/swipe_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorButton"
        >

        <eu.slicky.pomesljajcek.ui.view.AppTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"

            android:textColor="@color/textPrimary"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_light"
            android:letterSpacing=".1"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.daimajia.swipe.SwipeLayout>
